syntax = "proto3";

package menuPackage;

service Menu {
    rpc addMenuItem(MenuItemInput) returns (AddMenuItemResponse);
    rpc getMenuItems(MenuRequest) returns (GetMenuItemsResponse);
}

message MenuRequest {
    // Add necessary request parameters
}

message MenuItemInput {
    string name = 1;
    string description = 2;
    string category = 3;
    double price = 4;
}

message GetMenuItemsResponse {
    repeated MenuItem items = 1;
}

message MenuItem {
    string id = 1;
    string name = 2;
    string description = 3;
    string category = 4;
    double price = 5;
    // Other fields
}

message AddMenuItemResponse {
    bool success = 1;
    string message = 2;
}
